# haskell-ffi-tutorial

./: .gitignore  Example.hs  Example.hsc  Example_stub.h  Makefile  README.md  haskel_ffi.cabal  myfile.h  wrapper.c
cbits/: wrapper.c
src/: Example.hs  Example.hsc  Example_out.hs  Example_stub.h
