name:                haskell-ffi
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Alex Petrov
maintainer:          alexp@coffeenco.de
copyright:           Alex Petrov
build-type:          Simple
extra-source-files:  cbits/wrapper.c
cabal-version:       >=1.10

library
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Example
  other-extensions:    CPP
                      , ForeignFunctionInterface
                      , EmptyDataDecls
                      , RecordWildCards
  Include-dirs:       include
  ghc-options:        -threaded -fforce-recomp -shared -dynamic -fPIC

  if (arch(i386) || arch(x86_64))
    cpp-options: -DARCH_X86
